###### TWE 5.4-1 RELEASED ######
2016-04-18 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by setting XPDL to read-only and initializing caches before validation
   # Improved performance by not design-time validating XMLAttribute elements which are not required and don't have default value (e.g. Name attribute)
   # Improved performance by not design-time validating most of the XMLSimpleElement elements (which normally do not affectg validation process, e.g. Description element)

2016-04-15 Sasa Bojanic <sasaboy@together.at>
   # Improved performance by not validating graph when only moving entities within the same lane
   # Improved performance by optimizing Problems panel algorithm
   # Shark mode: not showing properties component by default

2016-04-14 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: support for new extended attribute USE_FIRST_DEADLINE_TIME_FOR_LIMIT_IF_UNDEFINED

2016-04-11 Sasa Bojanic <sasaboy@together.at>
   # Fix: when saving file which has "." in its name, extension was not appended to the end

2016-04-07 Sasa Bojanic <sasaboy@together.at>
   # Improved Search functionality

###### TWE 5.3-3 RELEASED ######
2016-03-09 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Fix for creation of outlook variables (Started/Completed date were defined as STRING variables)

2016-03-08 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved validation of TSC tool agent according to the changes in TSC and TWS's TSCToolAgent
   # Shark mode: Hiding all special extended attributes when trying to define "normal" extended attribute

###### TWE 5.3-2 RELEASED (2016-02-23) ######
2016-02-19 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Improved handling and validation of new TWF related extended attribute TWF_XML_VARIABLE_TO_HANDLE

2016-02-18 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: supported new TWF related extended attributes (TWF_XML_VARIABLE_TO_HANDLE and TWF_XML_VARIABLE_ITEM_NAME_PREFIXES)
