@@ -11452,6 +11452,12 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>Improved performance by setting XPDL to read-only and
+          initializing caches when saving XPDL (to have faster
+          validation)</para>
+        </listitem>
+
+        <listitem>
           <para>Improved performance by not design-time validating
           XMLAttribute elements which are not required and don't have default
           value (e.g. Name attribute)</para>
