@@ -1,4 +1,7 @@
 ###### TWE 5.4-1 RELEASED ######
+2016-04-19 Sasa Bojanic <sasaboy@together.at>
+   # Improved performance by setting XPDL to read-only and initializing caches when saving XPDL (to have faster validation)
+
 2016-04-18 Sasa Bojanic <sasaboy@together.at>
    # Improved performance by setting XPDL to read-only and initializing caches before validation
    # Improved performance by not design-time validating XMLAttribute elements which are not required and don't have default value (e.g. Name attribute)
